--- a/KonsulQ_FE/package.json
+++ b/KonsulQ_FE/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
     "firebase": "^11.1.0",
