--- a/KonsulQ_FE/package.json
+++ b/KonsulQ_FE/package.json
@@ -15,6 +15,10 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
+    "datatables.net-dt": "^2.1.8",
+    "datatables.net-react": "^1.0.0",
+    "datatables.net-responsive-dt": "^3.0.3",
+    "datatables.net-select-dt": "^2.1.0",
     "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
