--- a/KonsulQ_FE/package.json
+++ b/KonsulQ_FE/package.json
@@ -21,6 +21,7 @@
     "datatables.net-select-dt": "^2.1.0",
     "firebase": "^11.1.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
